@@ -8,6 +8,7 @@ Kiwix 0.9 rc3
 * FIXED: kiwix-serve crahs if really long URL (#400)
 * FIXED: small display issue if multilingual ZIM file
 * FIXED: Toolbar buttons order
+* FIXED: Argument forwarding in kiwix-launcher
 * NEW: New supported user interface languages: Chuvash (cv), Fiji
   Hindi Latin script (hif-latn), Mongolian (mn), Newari (new),
   Sanskrit (sa), Uzbek (uz)
